--- a/client/package.json
+++ b/client/package.json
@@ -6,23 +6,23 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
-    "hapi-nuxt": "^0.6.0",
-    "lodash": "4.17.10",
-    "nuxt": "^1.0.0",
+    "hapi-nuxt": "^1.0.1",
+    "lodash": "4.17.11",
+    "nuxt": "^2.3.4",
     "vuetify": "^1.0.19"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-vue": "^4.0.0",
