--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cerner",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "lab"
   },
